# conky-screensaver

./: .gitignore  CMakeLists.txt  README.md
src/: conf_parse.h  default_configs.h  helpers.c  helpers.h  inline.h  int_types.h  main.c  main_defines.h  parse_helpers.h
